@@ -22,6 +22,10 @@ This is a maintenance release, bugfixes only.
           thus for stereo files only half the correct size.
 * Bugfix: Corrected documentation, "make checks" should read "make check", funny this
           went unnoticed for over 3 years...
+* Bugfix: Issue #74: Album arts were only copied from MP3/4 sources. Removed restriction,
+          if the input file contains an album art it will be copied to the target (if
+          supported, of course, e.g., to mp3 or mp4. Ogg is not yet supported because
+          embedding album arts in Ogg can only be done by an inofficial workaround).
 
 Important changes in 2.1 (2020-12-14)
   
